# DistributedSystemsLoadMonitorAssignment

./: CMakeLists.txt  CMakePresets.json  README.md
src/: get-percentage-cpu.h  main.cpp  main.h
src/AppMessageTypes/: AppMessageTypes.h
src/Application/: Application.cpp  Application.h
src/Cluster/: Cluster.cpp  Cluster.h
src/ClusterMessagesReceiver/: ClusterMessagesReceiver.cpp  ClusterMessagesReceiver.h
src/ClusterNode/: ClusterNode.cpp  ClusterNode.h
src/CpuUsageCalculator/: CpuUsageCalculator.cpp  CpuUsageCalculator.h
src/GuidGenerator/: GuidGenerator.cpp  GuidGenerator.h
src/LoadInfoReporter/: LoadInfoReporter.cpp  LoadInfoReporter.h
